--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "drizzle-orm": "^0.44.5",
     "jose": "^6.1.1",
     "lucide-react": "^0.546.0",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.5.7",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
     "rehype-sanitize": "^6.0.0",
